--- a/VRChat/03/1031003.html
+++ b/VRChat/03/1031003.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xiBvAi1B79aSwqnxXO6G2ggmS47MwXcj78Qhmqm0OQM="></script>
+    "dIwJDkYGrDx5FpEwSyx43TAul4dlfNWrUzO75fwYEF0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】紳士の杖（△134ポリゴン）","description":"紳士の杖、オリジナル3Dモデルです。VRChatなどでアクセサリとしてどうでしょうか。\n△134ポリゴン\n\n画像前半2枚のシェーダーはStandard、3枚目はFlatLitToonを適用しています。\n\n---------------------------------------------------------------\nファイルの中身\n・ShinshiStick.unitypackage\n・Shinshi_stickLowPoly.fbx\n・各種texture\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nシェーダーはStandardが適用されていますが、別のものに変えることで見た目は大きく変わります。色々なものをお試しください。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。\nwakamaru shop","url":"https://booth.pm/ja/items/1031003","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1031003/a712f714-4770-4e8e-a2e2-c764708af8d0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xiBvAi1B79aSwqnxXO6G2ggmS47MwXcj78Qhmqm0OQM="></script>
+    nonce="dIwJDkYGrDx5FpEwSyx43TAul4dlfNWrUzO75fwYEF0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -432,9 +432,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
