--- a/VRChat/03/1024003.html
+++ b/VRChat/03/1024003.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "T8VOn9o4R7kw3K6I18CU4lKd9Lv4J04dIfJk7X5Sfl0="></script>
+    "eCMdUsKAMFIvhl474+rk8smr7e5KxlaKILx/v/0Is9g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" ３Dモデル - ねこすりっぱ -","description":"VRC/Unityゲーム当に利用可能な足用アクセサリ、ねこすりっぱです。\n\n・商用：可　\n・二次配布：不可　\n・改変：可\n・アダルトコンテンツへの利用：可\n・他利用規約を参照(購入の時点で利用規約に同意したものとします。)\n\n※特記事項\n・当モデルを利用したアバターをVRCのpublicワールドを除くアバターペデスタルにて利用することを許可します。\n\nVRChat等のアプリ、ゲーム制作、Vtuber活動等の動画配信にも利用可能です。\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。","url":"https://booth.pm/ja/items/1024003","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1024003/51c358e3-7f2d-40dd-ba3a-5f39d44affe6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T8VOn9o4R7kw3K6I18CU4lKd9Lv4J04dIfJk7X5Sfl0="></script>
+    nonce="eCMdUsKAMFIvhl474+rk8smr7e5KxlaKILx/v/0Is9g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -565,9 +565,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
