--- a/VRChat/80/1029980.html
+++ b/VRChat/80/1029980.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2XBxArk3zDDTUx7LV4g48nIjTDSpCNh0zwtsGA+d/e0="></script>
+    "TM2hMyCIhVoJcxh/DmLExyWkokWcnUq2mM0NrkK7+EM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】魔法使いの本（△520ポリゴン）","description":"魔法の本、オリジナル3Dモデルです。\n△520ポリゴン。\n（魔法の杖はこちらには含まれません）\n\n今すぐに魔法が使えそうな本の3Dモデルを制作しました。\n魔導書、グリモワールといった呼ばれ方をすることが多いようです。\n本の表紙、裏表紙、ページにボーンを入れアニメーションが設定できるようになっています。\n\nまた、サンプルとして3種類のアニメーションを制作し、Prefabに設定してあります。\n\n1.閉じた状態\n2.閉じた状態から開く\n3.開いた状態で紙が動き続ける\n\n3段階の流れをそのままVRChatで使うことができます。\n※VRHomeの画像をクリックすると、本が出てくる様子が見られる短いGIFアニメが再生されます。\n※杖の3Dモデルは入っていません。\n\nパーティクルや効果音を設定するなど、自由に遊んでください。\n\n---------------------------------------------------------------\nファイルの中身\n・MagicBook.unitypackage\n・MagicBookLowPoly.fbx\n・UV.png（各種）\n・各種texture\n\nテクスチャデータはサイズ2048で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが非常に大きいので、unityで使う際にリサイズ・圧縮をしてください。\nunitypackageのデータは、サイズを1024にし圧縮をしてあります。\nシェーダーはStandardが適用されていますが、別のものに変えることで見た目は大きく変わります。色々なものをお試しください。\n※画像、動画撮影時はAlloy Physical Shaderを使っています。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。\nwakamaru shop","url":"https://booth.pm/ja/items/1029980","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1029980/b8edea51-42db-4ec3-b075-96e58f1aa52a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2XBxArk3zDDTUx7LV4g48nIjTDSpCNh0zwtsGA+d/e0="></script>
+    nonce="TM2hMyCIhVoJcxh/DmLExyWkokWcnUq2mM0NrkK7+EM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
