--- a/VRChat/07/1027707.html
+++ b/VRChat/07/1027707.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "C2M7SligxKR7BhJ8whbMJ0K/ZorGF46biZWHDclU4ZM="></script>
+    "gFs+qpr0BFcaxRh2vaYb0DEfiDlpO322zDvpnbO5wWg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水棲種: アクエリア・ユニアV2【VRChat, VRM向けアバターモデル】","description":"遥か異世界の南国で見られる「アクエリア・ユニア」は、水辺に住まうレイメント（神秘性を有する知的生命体）です。\n人間に近い容姿でありながら魚類のようなヒレを持ちます。\n滅多に人前に姿を現しませんが、好奇心旺盛でコミュニケーションを好みます。\n\n「水棲レイメント」及び「アクエリア・ユニア」は種族・カテゴリ名です。\nあなたのアバターには、ぜひ独自の設定・名前をつけてあげてください。\n\n2018年にリリースしたモデル・服を、コンセプトを引き継いで「V2」としてリニューアル。まったく新しい「水棲ちゃん」に生まれ変わりました。\n","url":"https://booth.pm/ja/items/1027707","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/c0a72cc4-55c2-42d7-8acf-052eee064242/i/1027707/0f478457-cf8c-4128-b0f8-417371c4f0ab_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C2M7SligxKR7BhJ8whbMJ0K/ZorGF46biZWHDclU4ZM="></script>
+    nonce="gFs+qpr0BFcaxRh2vaYb0DEfiDlpO322zDvpnbO5wWg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -481,9 +481,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
