--- a/VRChat/08/1023408.html
+++ b/VRChat/08/1023408.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Z6nuV186/o+ASQJy6jABOMAWrD8hbLI8Oe8uhkWBj3E="></script>
+    "VgpMSE3+j0Hrb68/0/9lmQKIsdkYVq8rkacrvepWtio="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル『どーるちゃん』","description":"VRChat対応3Dモデル どーるちゃん\n\n※仕様が古いため正常な動作を保証できません。ご自分で修正して使用できる方のみ自己責任でのご購入をお願いします。\n\n■更新履歴\n2019年1月5日\n・シェーダー設定を更新しました(一部ワールドで暗くなりすぎる問題を修正)\n\n2019年1月3日　\n・Unity2017対応\n・UTS2最新版対応(一部ワールドでの色飛びがなくなりました)\n・一部テクスチャ描き足しました\n・ポリゴン数29965へ増加\n・ウェイト修正\n・口の中にメッシュを増やしました\n・シェイプキーで一部メッシュが乱れる不具合を直しました\n・軽量化のためメッシュを４つにまとめました\n\n2018年9月27日　公開\n\n\n\n\n■概要\n\nVRChatでのアバター利用を想定して作られたモデルです。\n改変しやすいように柄なしのテクスチャデータ(PSD、PNG)、胴体有り素体データ(FBX)付きです\n\nUnityPackageをインポート、Sceneファイルを開くだけでお手軽にアップロード準備できます(シェーダー、DynamicBone、VRC用アイトラッキング、リップシンクが自動であたります)\n\n●注意点\n事前にUnityのプロジェクト内に導入しておくもの\n・VRCSDK\n・DynamicBone\n・ユニティちゃんトゥーンシェーダーVer.2.0.5\n\n髪の毛の長さ調節は”kami”メッシュの中のシェイプキーで変更できます。\n\n\n動作確認はVRChatデスクトップモードのみです。それ以外の環境での動作は保証できませんのでご了承ください\n\n■同梱データ\n・モデルデータ、胴体有り素体のみモデルデータ(fbx*2)\n\n・テクスチャ、matcap、ノーマルマップデータ(png*13)\n　改変用テクスチャ髪の毛、服(psd*2)\n\n・まとめて導入用unitypackage(unitypackage*1)\n\n・Sceneファイル(unity*1)\n\n・立ちアニメーションデータ(anim*1)\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n\n・著作権は放棄していません。\n\n・配信、動画での商用利用は個人、法人に限らず可能です。\n\n・改変、改造は可能です(R18/R18G共に許可しますが自己責任でお願い致します)\n\n・本データの転載、再配布、ペデスタル利用を禁止します。(本データの一部を使用したもの不可)\n\n・宗教、政治活動での使用禁止します。\n\n■免責事項\n・本モデルに関連するファイルを使用して生じた不利益やトラブル等の一切の責任を負いません。\n\n\n・利用規約は予告なく変更・改定される事があります。\n\n\n\n■連絡先\nTwitter :　@killmachine1014","url":"https://booth.pm/ja/items/1023408","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/e1da7fe2-4e87-4ba0-85db-2a5eaedc6c78/i/1023408/e381f6b5-78f1-404a-bd4e-ca429d604de1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z6nuV186/o+ASQJy6jABOMAWrD8hbLI8Oe8uhkWBj3E="></script>
+    nonce="VgpMSE3+j0Hrb68/0/9lmQKIsdkYVq8rkacrvepWtio="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
